--- a/Ionic - DailyPills/myApp/src/app/tab1/tab1.page.html
+++ b/Ionic - DailyPills/myApp/src/app/tab1/tab1.page.html
@@ -7,35 +7,30 @@
 </ion-header>
 
 <ion-content>
-    <ion-card class="welcome-card">
-      <ion-img src="/assets/shapes.svg"></ion-img>
-      <ion-card-header>
-        <ion-card-subtitle>Get Started</ion-card-subtitle>
-        <ion-card-title>Welcome to Ionic</ion-card-title>
-      </ion-card-header>
-      <ion-card-content>
-        <p>Now that your app has been created, you'll want to start building out features and components. Check out some of the resources below for next steps.</p>
-      </ion-card-content>
-    </ion-card>
-    <ion-list lines="none">
-      <ion-list-header>
-        <ion-label>Resources</ion-label>
-      </ion-list-header>
-      <ion-item href="https://ionicframework.com/docs/">
-        <ion-icon slot="start" color="medium" name="book"></ion-icon>
-        <ion-label>Ionic Documentation</ion-label>
-      </ion-item>
-      <ion-item href="https://ionicframework.com/docs/building/scaffolding">
-        <ion-icon slot="start" color="medium" name="build"></ion-icon>
-        <ion-label>Scaffold Out Your App</ion-label>
-      </ion-item>
-      <ion-item href="https://ionicframework.com/docs/layout/structure">
-        <ion-icon slot="start" color="medium" name="grid"></ion-icon>
-        <ion-label>Change Your App Layout</ion-label>
-      </ion-item>
-      <ion-item href="https://ionicframework.com/docs/theming/basics">
-        <ion-icon slot="start" color="medium" name="color-fill"></ion-icon>
-        <ion-label>Theme Your App</ion-label>
-      </ion-item>
-    </ion-list>
+  <div ng-app="demoApp" ng-controller="demoController">
+    <div mobiscroll-form="formSettings">
+      <div class="mbsc-grid">
+        <div class="mbsc-row">
+          <div class="mbsc-col-sm-12 mbsc-col-md-4">
+            <div class="mbsc-form-group">
+              <div class="mbsc-form-group-title">Mon-Sun</div>
+              <div ng-model="mon" mobiscroll-calendar="monSettings"></div>
+            </div>
+          </div>
+          <div class="mbsc-col-sm-12 mbsc-col-md-4">
+            <div class="mbsc-form-group">
+              <div class="mbsc-form-group-title">Sat-Fri</div>
+              <div ng-model="sat" mobiscroll-calendar="satSettings"></div>
+            </div>
+          </div>
+          <div class="mbsc-col-sm-12 mbsc-col-md-4">
+            <div class="mbsc-form-group">
+              <div class="mbsc-form-group-title">Multiple</div>
+              <div ng-model="multi" mobiscroll-calendar="multiSettings"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </ion-content>
