--- a/Ionic - DailyPills/myApp/src/app/pages/tabs/tabs.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/tabs/tabs.page.html
@@ -2,7 +2,11 @@
 
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab2">
-      <ion-icon name="flash"></ion-icon>
+      <ion-icon name="briefcase"></ion-icon>
+    </ion-tab-button>
+
+    <ion-tab-button tab="tab4">
+      <ion-icon name="book"></ion-icon>
     </ion-tab-button>
 
     <ion-tab-button tab="homepage">
@@ -10,7 +14,7 @@
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
-      <ion-icon name="send"></ion-icon>
+      <ion-icon name="cog"></ion-icon>
     </ion-tab-button>
   </ion-tab-bar>
 
