--- a/Ionic - DailyPills/myApp/src/app/pages/homepage/homepage.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/homepage/homepage.page.html
@@ -1,9 +1,18 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>homepage</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
-
+  <ion-list lines="full">
+    <ion-list-header color="primary">
+      <ion-label>Mercoledi 12 Aprile 2019</ion-label>
+    </ion-list-header>
+    <ion-progress-bar color="secondary" value="0.3"></ion-progress-bar>
+    <ion-item>
+      <ion-avatar slot="start">
+        <img id="icon" src="assets/icon/pill.png">
+      </ion-avatar>
+      <ion-label>
+        <h2>pippo</h2>
+        <p>pluto</p>
+      </ion-label>
+      <ion-icon name="add-circle"></ion-icon>
+    </ion-item>
+  </ion-list>
 </ion-content>
