--- a/Ionic - DailyPills/myApp/src/app/pages/login/login.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/login/login.page.html
@@ -1,9 +1,38 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>login</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content>
-
+<ion-content color="primary">
+  <ion-grid>
+    <ion-row class="ion-padding-top">
+      <ion-col size="12">
+        <ion-card>
+          <ion-item class="ion-item-border">
+            <ion-label color="primary" position="floating">Username</ion-label>
+            <ion-input autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true" color="primary" inputmode="text" placeholder="Inserisci il tuo username" required="true"></ion-input>
+            <ion-icon name="person" color="primary" slot="end"></ion-icon>
+          </ion-item>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="12">
+        <ion-card>
+          <ion-item class="ion-item-border">
+            <ion-label color="primary" position="floating">Password</ion-label>
+            <ion-input autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true" color="primary" inputmode="password"  type="password" placeholder="Inserisci password" required="true"></ion-input>
+            <ion-icon name="key" color="primary" slot="end"></ion-icon>
+          </ion-item>
+        </ion-card>
+        </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="12">
+        <ion-card color="light">
+          <ion-button color="light" style="box-shadow: none" type="submit" expand="full">
+            <ion-icon slot="start"  color="primary" name="log-in"></ion-icon>
+            <ion-text color="primary">
+              Login
+            </ion-text>
+          </ion-button>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
