--- a/Ionic - DailyPills/myApp/src/app/pages/tab3/tab3.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/tab3/tab3.page.html
@@ -1,9 +1,17 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Tab Three
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content></ion-content>
+<ion-content>
+  <ion-grid>
+    <ion-row>
+      <ion-col size="12">
+        <ion-card color="primary">
+          <ion-card-content>
+            <ion-input placeholder="Nome" color="secondary" [autofocus]="true" [type]="text" ></ion-input>
+            <ion-input placeholder="Cognome" color="secondary" [autofocus]="true" [type]="text"></ion-input>
+            <ion-input placeholder="Username" color="secondary" [autofocus]="true" [type]="text"></ion-input>
+            <ion-input placeholder="Password" color="secondary" [autofocus]="true" type="password" [pattern]="password"></ion-input>
+            <ion-input placeholder="Conferma password" color="secondary" [autofocus]="true" type="password" [pattern]="password"></ion-input>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+</ion-content>
