--- a/Ionic - DailyPills/myApp/src/app/pages/login/login.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/login/login.page.html
@@ -1,6 +1,9 @@
 <ion-content color="primary">
   <ion-grid>
-    <ion-row class="ion-padding-top">
+    <ion-row>
+      <ion-img src="assets/icon/pillole2.png"></ion-img>
+    </ion-row>
+    <ion-row>
       <ion-col size="12">
         <ion-card>
           <ion-item class="ion-item-border">
