--- a/Ionic - DailyPills/myApp/src/app/pages/tab2/tab2.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/tab2/tab2.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar color="primary" style="padding: 20px;">
-    <ion-searchbar placeholder="Cerca Medicina" animated></ion-searchbar>
+    <ion-searchbar placeholder="Cerca Medicina" animated (ionChange)="liveMedicineFilter($event)"></ion-searchbar>
   </ion-toolbar>
 </ion-header>
 
