--- a/Ionic - DailyPills/myApp/src/app/pages/login/login.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/login/login.page.html
@@ -27,10 +27,10 @@
     </ion-row>
     <ion-row>
       <ion-col size="12">
-        <ion-card color="light">
-          <ion-button color="light" style="box-shadow: none" type="submit" expand="full">
-            <ion-icon slot="start"  color="primary" name="log-in"></ion-icon>
-            <ion-text color="primary">
+        <ion-card color="secondary" style="border-radius: 20px">
+          <ion-button color="secondary" style="box-shadow: none" type="submit" expand="full" fill="clear">
+            <ion-icon slot="start"  color="light" name="log-in"></ion-icon>
+            <ion-text color="light">
               Login
             </ion-text>
           </ion-button>
