Registrazione e login e guard auth

--- a/Ionic - DailyPills/myApp/src/app/pages/tab2/tab2.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/tab2/tab2.page.html
@@ -5,7 +5,7 @@
 </ion-header>
 
 <ion-content>
-  <ion-list lines="full" *ngFor="let farmaco of farmaci$ ">
+  <ion-list lines="full" *ngFor="let farmaco of farmaciList$ ">
       <ion-item>
         <ion-avatar slot="start">
           <img id="icon" src="assets/icon/pill.png">
