--- a/Ionic - DailyPills/myApp/src/app/pages/login/login.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/login/login.page.html
@@ -1,43 +1,29 @@
 <ion-content color="primary">
   <ion-grid>
     <ion-row>
-      <ion-col offset="3">
-        <ion-img src="assets/icon/login.png" style="height: 125px;width: 125px;"></ion-img>
+      <ion-col style="margin-top: 30px">
+        <ion-img src="assets/icon/login.png" style="height: 300px;width: 300px; display: block; margin: auto"></ion-img>
       </ion-col>
     </ion-row>
-    <form id="login">
+      <ion-col style="">
+    <form [formGroup]="loginFormModel" id="login" style="margin-top: 40px;">
       <ion-row>
         <ion-col size="12">
           <ion-card>
             <ion-item class="ion-item-border">
               <ion-label color="primary" position="floating">Username</ion-label>
-              <ion-input autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true" color="primary" inputmode="text" placeholder="Inserisci il tuo username" required="true"></ion-input>
+              <ion-input formControlName="userormail" autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true" color="primary" inputmode="text" placeholder="Inserisci il tuo username" required="true"></ion-input>
               <ion-icon name="person" color="primary" slot="end"></ion-icon>
             </ion-item>
           </ion-card>
         </ion-col>
-<<<<<<< HEAD
     </ion-row>
-    <ion-row>
-      <ion-col size="12">
-        <ion-card color="secondary" style="border-radius: 20px">
-          <ion-button color="secondary" style="box-shadow: none" type="submit" expand="full" fill="clear">
-            <ion-icon slot="start"  color="light" name="log-in"></ion-icon>
-            <ion-text color="light">
-              Login
-            </ion-text>
-          </ion-button>
-        </ion-card>
-      </ion-col>
-    </ion-row>
-=======
-      </ion-row>
       <ion-row>
         <ion-col size="12">
           <ion-card>
             <ion-item class="ion-item-border">
               <ion-label color="primary" position="floating">Password</ion-label>
-              <ion-input autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true" color="primary" inputmode="password"  type="password" placeholder="Inserisci password" required="true"></ion-input>
+              <ion-input formControlName="password" autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true" color="primary" inputmode="password"  type="password" placeholder="Inserisci password" required="true"></ion-input>
               <ion-icon name="key" color="primary" slot="end"></ion-icon>
             </ion-item>
           </ion-card>
@@ -45,10 +31,10 @@
       </ion-row>
       <ion-row>
         <ion-col size="12">
-          <ion-card color="light">
-            <ion-button color="light" style="box-shadow: none" type="submit" expand="full">
-              <ion-icon slot="start"  color="primary" name="log-in"></ion-icon>
-              <ion-text color="primary">
+          <ion-card color="secondary" style="border-radius: 20px">
+            <ion-button color="secondary" style="box-shadow: none" type="submit" expand="full" fill="clear" (click)="onLogin()">
+              <ion-icon slot="start"  color="light" name="log-in"></ion-icon>
+              <ion-text color="light">
                 Login
               </ion-text>
             </ion-button>
@@ -56,6 +42,9 @@
         </ion-col>
       </ion-row>
     </form>
->>>>>>> 541bd4faf1e815615e700e2c31abc2cece19b61c
+      <ion-row style="padding-top: 30px;">
+          <ion-label (click)="openRegisterPage()" color="light" style="margin: auto;">Non ancora registrato? Registrati</ion-label>
+      </ion-row>
+      </ion-col>
   </ion-grid>
 </ion-content>
