--- a/Ionic - DailyPills/myApp/src/app/pages/registration/registration.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/registration/registration.page.html
@@ -1,12 +1,12 @@
 <ion-content color="primary" padding-top="3">
   <ion-grid>
-    <form id="registration">
+    <form [formGroup]="loginFormModel" id="registration">
       <ion-row>
         <ion-col size="12">
           <ion-card>
             <ion-item class="ion-item-border">
               <ion-label color="primary" position="floating">Username</ion-label>
-              <ion-input autocorrect="on" autofocus="on"   clearInput="true" clearOnEdit="true" color="primary" inputmode="text" placeholder="Inserisci il tuo username" required="true"></ion-input>
+              <ion-input formControlName="username" autocorrect="on" autofocus="on"   clearInput="true" clearOnEdit="true" color="primary" inputmode="text" placeholder="Inserisci il tuo username" required="true"></ion-input>
               <ion-icon name="person" color="primary" slot="end"></ion-icon>
             </ion-item>
           </ion-card>
@@ -17,7 +17,7 @@
           <ion-card>
             <ion-item class="ion-item-border">
               <ion-label color="primary" position="floating">Nome</ion-label>
-              <ion-input autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true" color="primary" inputmode="text" placeholder="Inserisci il tuo Nome" required="true"></ion-input>
+              <ion-input formControlName="name" autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true" color="primary" inputmode="text" placeholder="Inserisci il tuo Nome" required="true"></ion-input>
               <ion-icon name="person" color="primary" slot="end"></ion-icon>
             </ion-item>
           </ion-card>
@@ -28,7 +28,18 @@
           <ion-card>
             <ion-item class="ion-item-border">
               <ion-label color="primary" position="floating">Cognome</ion-label>
-              <ion-input autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true" color="primary" inputmode="text" placeholder="Inserisci il tuo Cognome" required="true"></ion-input>
+              <ion-input formControlName="surname" autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true" color="primary" inputmode="text" placeholder="Inserisci il tuo Cognome" required="true"></ion-input>
+              <ion-icon name="person" color="primary" slot="end"></ion-icon>
+            </ion-item>
+          </ion-card>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size="12">
+          <ion-card>
+            <ion-item class="ion-item-border">
+              <ion-label color="primary" position="floating">E-mail</ion-label>
+              <ion-input formControlName="email" autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true" color="primary" inputmode="text" placeholder="Inserisci il tuo Cognome" required="true"></ion-input>
               <ion-icon name="person" color="primary" slot="end"></ion-icon>
             </ion-item>
           </ion-card>
@@ -39,7 +50,7 @@
           <ion-card>
             <ion-item class="ion-item-border">
               <ion-label color="primary" position="floating">Password</ion-label>
-              <ion-input autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true" color="primary" inputmode="password"  type="password" placeholder="Inserisci password" required="true"></ion-input>
+              <ion-input formControlName="password" autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true" color="primary" inputmode="password"  type="password" placeholder="Inserisci password" required="true"></ion-input>
               <ion-icon name="key" color="primary" slot="end"></ion-icon>
             </ion-item>
           </ion-card>
@@ -50,7 +61,7 @@
           <ion-card>
             <ion-item class="ion-item-border">
               <ion-label color="primary" position="floating">Ripeti Password</ion-label>
-              <ion-input autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true" color="primary" inputmode="password"  type="password" placeholder="Ripeti password" required="true"></ion-input>
+              <ion-input formControlName="password_confirmation" autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true" color="primary" inputmode="password"  type="password" placeholder="Ripeti password" required="true"></ion-input>
               <ion-icon name="key" color="primary" slot="end"></ion-icon>
             </ion-item>
           </ion-card>
@@ -58,10 +69,10 @@
       </ion-row>
       <ion-row>
         <ion-col size="12">
-          <ion-card color="light">
-            <ion-button color="light" style="box-shadow: none" type="submit" expand="full">
-              <ion-icon slot="start"  color="primary" name="log-in"></ion-icon>
-              <ion-text color="primary">
+          <ion-card color="secondary" style="border-radius: 20px">
+            <ion-button color="secondary" style="box-shadow: none" type="submit" expand="full" fill="clear" (click)="registerSubmit()">
+              <ion-icon slot="start"  color="light" name="log-in"></ion-icon>
+              <ion-text color="light">
                 Registrati
               </ion-text>
             </ion-button>
@@ -69,5 +80,8 @@
         </ion-col>
       </ion-row>
     </form>
+    <ion-row style="padding-top: 30px;">
+      <ion-label (click)="backtoLogin()" color="light" style="margin: auto;">Torna alla pagina di login</ion-label>
+    </ion-row>
   </ion-grid>
 </ion-content>
