--- a/Ionic - DailyPills/myApp/src/app/pages/login/login.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/login/login.page.html
@@ -2,7 +2,7 @@
   <ion-grid>
     <ion-row>
       <ion-col style="margin-top: 30px">
-        <ion-img src="assets/icon/login.png" style="height: 300px;width: 300px; display: block; margin: auto"></ion-img>
+        <ion-img src="assets/icon/login.png" style="height: 200px;width: 200px; display: block; margin: auto"></ion-img>
       </ion-col>
     </ion-row>
       <ion-col style="">
@@ -12,7 +12,7 @@
           <ion-card>
             <ion-item class="ion-item-border">
               <ion-label color="primary" position="floating">Username</ion-label>
-              <ion-input formControlName="userormail" autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true" color="primary" inputmode="text" placeholder="Inserisci il tuo username" required="true"></ion-input>
+              <ion-input formControlName="userormail" autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true" color="primary" inputmode="text" placeholder="{{ 'LOGIN_USER_STRING' | translate }}" required="true"></ion-input>
               <ion-icon name="person" color="primary" slot="end"></ion-icon>
             </ion-item>
           </ion-card>
@@ -23,7 +23,7 @@
           <ion-card>
             <ion-item class="ion-item-border">
               <ion-label color="primary" position="floating">Password</ion-label>
-              <ion-input formControlName="password" autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true" color="primary" inputmode="password"  type="password" placeholder="Inserisci password" required="true"></ion-input>
+              <ion-input formControlName="password" autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true" color="primary" inputmode="password"  type="password" placeholder="{{ 'LOGIN_PASSWORD_STRING' | translate }}" required="true"></ion-input>
               <ion-icon name="key" color="primary" slot="end"></ion-icon>
             </ion-item>
           </ion-card>
@@ -35,7 +35,7 @@
             <ion-button color="secondary" style="box-shadow: none" type="submit" expand="full" fill="clear" (click)="onLogin()">
               <ion-icon slot="start"  color="light" name="log-in"></ion-icon>
               <ion-text color="light">
-                Login
+                {{ 'LOGIN_BUTTON' | translate }}
               </ion-text>
             </ion-button>
           </ion-card>
@@ -43,7 +43,7 @@
       </ion-row>
     </form>
       <ion-row style="padding-top: 30px;">
-          <ion-label (click)="openRegisterPage()" color="light" style="margin: auto;">Non ancora registrato? Registrati</ion-label>
+          <ion-label (click)="openRegisterPage()" color="light" style="margin: auto;">{{ 'REGISTER_NEW_ACCOUNT' | translate }}</ion-label>
       </ion-row>
       </ion-col>
   </ion-grid>
