--- a/Ionic - DailyPills/myApp/src/app/pages/registration/registration.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/registration/registration.page.html
@@ -6,7 +6,7 @@
           <ion-card>
             <ion-item class="ion-item-border">
               <ion-label color="primary" position="floating">Username</ion-label>
-              <ion-input formControlName="username" autocorrect="on" autofocus="on"   clearInput="true" clearOnEdit="true" color="primary" inputmode="text" placeholder="Inserisci il tuo username" required="true"></ion-input>
+              <ion-input formControlName="username" autocorrect="on" autofocus="on"   clearInput="true" clearOnEdit="true" color="primary" inputmode="text" placeholder="{{ 'REGISTER_USER_STRING' | translate }}" required="true"></ion-input>
               <ion-icon name="person" color="primary" slot="end"></ion-icon>
             </ion-item>
           </ion-card>
@@ -16,8 +16,8 @@
         <ion-col size="12">
           <ion-card>
             <ion-item class="ion-item-border">
-              <ion-label color="primary" position="floating">Nome</ion-label>
-              <ion-input formControlName="name" autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true" color="primary" inputmode="text" placeholder="Inserisci il tuo Nome" required="true"></ion-input>
+              <ion-label color="primary" position="floating">{{'REGISTER_NAME' | translate }}</ion-label>
+              <ion-input formControlName="name" autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true" color="primary" inputmode="text" placeholder="{{ 'REGISTER_NAME_STRING' | translate }}" required="true"></ion-input>
               <ion-icon name="person" color="primary" slot="end"></ion-icon>
             </ion-item>
           </ion-card>
@@ -27,8 +27,8 @@
         <ion-col size="12">
           <ion-card>
             <ion-item class="ion-item-border">
-              <ion-label color="primary" position="floating">Cognome</ion-label>
-              <ion-input formControlName="surname" autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true" color="primary" inputmode="text" placeholder="Inserisci il tuo Cognome" required="true"></ion-input>
+              <ion-label color="primary" position="floating">{{'REGISTER_SURNAME' | translate }}</ion-label>
+              <ion-input formControlName="surname" autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true" color="primary" inputmode="text" placeholder="{{ 'REGISTER_SURNAME_STRING' | translate }}" required="true"></ion-input>
               <ion-icon name="person" color="primary" slot="end"></ion-icon>
             </ion-item>
           </ion-card>
@@ -39,7 +39,7 @@
           <ion-card>
             <ion-item class="ion-item-border">
               <ion-label color="primary" position="floating">E-mail</ion-label>
-              <ion-input formControlName="email" autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true" color="primary" inputmode="text" placeholder="Inserisci il tuo Cognome" required="true"></ion-input>
+              <ion-input formControlName="email" autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true" color="primary" inputmode="text" placeholder="{{ 'REGISTER_EMAIL_STRING' | translate }}" required="true"></ion-input>
               <ion-icon name="person" color="primary" slot="end"></ion-icon>
             </ion-item>
           </ion-card>
@@ -50,7 +50,7 @@
           <ion-card>
             <ion-item class="ion-item-border">
               <ion-label color="primary" position="floating">Password</ion-label>
-              <ion-input formControlName="password" autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true" color="primary" inputmode="password"  type="password" placeholder="Inserisci password" required="true"></ion-input>
+              <ion-input formControlName="password" autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true" color="primary" inputmode="password"  type="password" placeholder="{{ 'REGISTER_PASSWORD_STRING' | translate }}" required="true"></ion-input>
               <ion-icon name="key" color="primary" slot="end"></ion-icon>
             </ion-item>
           </ion-card>
@@ -60,8 +60,8 @@
         <ion-col size="12">
           <ion-card>
             <ion-item class="ion-item-border">
-              <ion-label color="primary" position="floating">Ripeti Password</ion-label>
-              <ion-input formControlName="password_confirmation" autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true" color="primary" inputmode="password"  type="password" placeholder="Ripeti password" required="true"></ion-input>
+              <ion-label color="primary" position="floating">{{ 'REGISTER_VERIFYPASSWORD_STRING' | translate }}</ion-label>
+              <ion-input formControlName="password_confirmation" autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true" color="primary" inputmode="password"  type="password" placeholder="{{ 'REGISTER_VERIFYPASSWORD_STRING' | translate }}" required="true"></ion-input>
               <ion-icon name="key" color="primary" slot="end"></ion-icon>
             </ion-item>
           </ion-card>
@@ -73,7 +73,7 @@
             <ion-button color="secondary" style="box-shadow: none" type="submit" expand="full" fill="clear" (click)="registerSubmit()" [disabled]="!loginFormModel.valid">
               <ion-icon slot="start"  color="light" name="log-in"></ion-icon>
               <ion-text color="light">
-                Registrati
+                {{ 'REGISTER_BUTTON' | translate }}
               </ion-text>
             </ion-button>
           </ion-card>
@@ -81,7 +81,7 @@
       </ion-row>
     </form>
     <ion-row style="padding-top: 30px;">
-      <ion-label (click)="backtoLogin()" color="light" style="margin: auto;">Torna alla pagina di login</ion-label>
+      <ion-label (click)="backtoLogin()" color="light" style="margin: auto;">{{ 'LOG_IN_COMEBACK' | translate }}</ion-label>
     </ion-row>
   </ion-grid>
 </ion-content>
