--- a/Ionic - DailyPills/myApp/src/app/pages/tab3/tab3.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/tab3/tab3.page.html
@@ -1,17 +1,26 @@
+<ion-header>
+  <ion-toolbar color="primary" style="padding: 20px;">
+    <!--    <ion-searchbar placeholder="Cerca Medicina" animated (ionChange)="liveMedicineFilter($event)"></ion-searchbar>-->
+    <ion-label>Il mio Armadietto</ion-label>
+  </ion-toolbar>
+</ion-header>
+
 <ion-content>
-  <ion-grid>
-    <ion-row>
-      <ion-col size="12">
-        <ion-card color="primary">
-          <ion-card-content>
-            <ion-input placeholder="Nome" color="secondary" [autofocus]="true" [type]="text" ></ion-input>
-            <ion-input placeholder="Cognome" color="secondary" [autofocus]="true" [type]="text"></ion-input>
-            <ion-input placeholder="Username" color="secondary" [autofocus]="true" [type]="text"></ion-input>
-            <ion-input placeholder="Password" color="secondary" [autofocus]="true" type="password" [pattern]="password"></ion-input>
-            <ion-input placeholder="Conferma password" color="secondary" [autofocus]="true" type="password" [pattern]="password"></ion-input>
-          </ion-card-content>
-        </ion-card>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+  <ion-list lines="full">
+    <ion-item>
+      <ion-avatar slot="start">
+        <img id="icon" src="assets/icon/pill.png">
+      </ion-avatar>
+      <ion-label>
+        <h2>Tachipirina</h2>
+        <p>jdhfjhdfjhfsjdkhk</p>
+      </ion-label>
+      <ion-icon name="arrow-dropright"></ion-icon>
+    </ion-item>
+  </ion-list>
+  <ion-fab horizontal="end" vertical="bottom" slot="fixed">
+    <ion-fab-button color="primary">
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
 </ion-content>
