--- a/Ionic - DailyPills/myApp/src/app/pages/tabs/tabs.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/tabs/tabs.page.html
@@ -1,6 +1,6 @@
 <ion-tabs>
 
-  <ion-tab-bar slot="bottom">
+  <ion-tab-bar slot="bottom" style="height: 80px;">
     <ion-tab-button tab="tab2">
       <ion-icon name="briefcase"></ion-icon>
     </ion-tab-button>
