armadietto ed home

--- a/Ionic - DailyPills/myApp/src/app/pages/dettaglio-farmaco/dettaglio-farmaco.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/dettaglio-farmaco/dettaglio-farmaco.page.html
@@ -1,9 +1,22 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Tachipirina</ion-title>
+<ion-header id="ih">
+  <ion-toolbar margin-bottom="5" margin-top="5" color="primary" mode="ios">
+    <ion-title id="it">Tachipirina</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+  <ion-list lines="none">
+    <ion-item class="corner1">
+      <ion-title>Principio attivo:</ion-title>
+      <ion-text>Cortisolo</ion-text>
+    </ion-item>
+    <ion-item color="secondary">
+      <ion-title>Quantità principio:</ion-title>
+      <ion-text>1 mg</ion-text>
+    </ion-item>
+    <ion-item color="light">
+      <ion-title>Qualcosa:</ion-title>
+      <ion-text>si</ion-text>
+    </ion-item>
+  </ion-list>
 </ion-content>
