--- a/Ionic - DailyPills/myApp/src/app/pages/armadietto/armadietto.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/armadietto/armadietto.page.html
@@ -1,5 +1,8 @@
 <ion-header>
-  <ion-toolbar color="primary" style="padding: 20px;">
+  <ion-toolbar color="primary" style="padding: 10px;">
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
     <!--    <ion-searchbar placeholder="Cerca Medicina" animated (ionChange)="liveMedicineFilter($event)"></ion-searchbar>-->
     <ion-label>Il mio Armadietto</ion-label>
   </ion-toolbar>
@@ -20,7 +23,7 @@
   </ion-list>
   <ion-fab horizontal="end" vertical="bottom" slot="fixed">
     <ion-fab-button color="primary">
-      <ion-icon name="add"></ion-icon>
+      <ion-icon name="arrow-dropright"></ion-icon>
     </ion-fab-button>
   </ion-fab>
 </ion-content>
