--- a/Ionic - DailyPills/myApp/src/app/pages/homepage/homepage.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/homepage/homepage.page.html
@@ -3,8 +3,8 @@
 </ion-list-header>
 <ion-progress-bar color="secondary" value="0.3"></ion-progress-bar>
 <ion-content>
-  <ion-list lines="full">
-    <ion-list-header color="light">
+  <ion-list lines="none">
+    <ion-list-header>
       <ion-text color="primary">08:00</ion-text>
     </ion-list-header>
 
@@ -29,10 +29,18 @@
       <ion-icon name="arrow-dropright"></ion-icon>
     </ion-item>
 
-    <ion-list-header color="light">
+    <ion-list-header>
       <ion-text color="primary">14:00</ion-text>
     </ion-list-header>
-
-
+    <ion-item>
+      <ion-avatar slot="start">
+        <img id="icon" src="assets/icon/pill.png">
+      </ion-avatar>
+      <ion-label>
+        <h2>pippo</h2>
+        <p>pluto</p>
+      </ion-label>
+      <ion-icon name="arrow-dropright"></ion-icon>
+    </ion-item>
   </ion-list>
 </ion-content>
