--- a/Ionic - DailyPills/myApp/src/app/pages/tabs/tabs.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/tabs/tabs.page.html
@@ -1,11 +1,11 @@
 <ion-tabs>
 
-  <ion-tab-bar slot="bottom" style="height: 80px;">
-    <ion-tab-button tab="tab2">
+  <ion-tab-bar slot="bottom">
+    <ion-tab-button tab="armadietto">
       <ion-icon name="briefcase"></ion-icon>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab4">
+    <ion-tab-button tab="piani">
       <ion-icon name="book"></ion-icon>
     </ion-tab-button>
 
@@ -13,7 +13,7 @@
       <ion-icon name="home"></ion-icon>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3">
+    <ion-tab-button tab="impostazioni">
       <ion-icon name="cog"></ion-icon>
     </ion-tab-button>
   </ion-tab-bar>
