--- a/Ionic - DailyPills/myApp/src/app/pages/dettaglio-farmaco/dettaglio-farmaco.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/dettaglio-farmaco/dettaglio-farmaco.page.html
@@ -1,22 +1,32 @@
 <ion-header id="ih">
-  <ion-toolbar margin-bottom="5" margin-top="5" color="primary" mode="ios">
-    <ion-title id="it">Tachipirina</ion-title>
-  </ion-toolbar>
+  <ion-item color="primary">
+    <ion-thumbnail slot="start">
+      <img src="assets/icon/pill.png">
+    </ion-thumbnail>
+    <ion-text><h2>Tachipirina</h2></ion-text>
+  </ion-item>
 </ion-header>
 
-<ion-content>
+<ion-content fullscreen>
   <ion-list lines="none">
-    <ion-item class="corner1">
-      <ion-title>Principio attivo:</ion-title>
-      <ion-text>Cortisolo</ion-text>
+
+    <ion-item>
+      <ion-avatar slot="start">
+        <ion-icon name="body"></ion-icon>
+      </ion-avatar>
+      <ion-label>
+        <h3>Principio Attivo</h3>
+        <p>Anfetamina</p>
+      </ion-label>
     </ion-item>
-    <ion-item color="secondary">
-      <ion-title>Quantità principio:</ion-title>
-      <ion-text>1 mg</ion-text>
-    </ion-item>
-    <ion-item color="light">
-      <ion-title>Qualcosa:</ion-title>
-      <ion-text>si</ion-text>
+    <ion-item>
+      <ion-avatar slot="start">
+        <ion-icon name="logo-euro"></ion-icon>
+      </ion-avatar>
+      <ion-label>
+        <h3>Spesa</h3>
+        <p>Dispensato da  SSN</p>
+      </ion-label>
     </ion-item>
   </ion-list>
 </ion-content>
