--- a/Ionic - DailyPills/myApp/src/app/pages/homepage/homepage.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/homepage/homepage.page.html
@@ -1,7 +1,7 @@
 <ion-list-header color="primary">
   <ion-label>Mercoledi 12 Aprile 2019</ion-label>
 </ion-list-header>
-<ion-progress-bar color="secondary" value="0.3"></ion-progress-bar>
+<ion-progress-bar color="secondary" value="0.3">30</ion-progress-bar>
 <ion-content>
   <ion-list lines="none">
     <ion-list-header>
