dettaglio farmaco draft 1

--- a/Ionic - DailyPills/myApp/src/app/pages/dettaglio-farmaco/dettaglio-farmaco.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/dettaglio-farmaco/dettaglio-farmaco.page.html
@@ -1,8 +1,13 @@
 <ion-header id="ih">
   <ion-item color="primary">
+    <ion-avatar>
+      <img src="assets/icon/login.png">
+    </ion-avatar>
+    <!--
     <ion-thumbnail slot="start">
       <img src="assets/icon/pill.png">
     </ion-thumbnail>
+    -->
     <ion-text><h2>Tachipirina</h2></ion-text>
   </ion-item>
 </ion-header>
@@ -19,13 +24,31 @@
         <p>Anfetamina</p>
       </ion-label>
     </ion-item>
-    <ion-item>
-      <ion-avatar slot="start">
+    <ion-item color="light">
+      <ion-avatar slot="end">
         <ion-icon name="logo-euro"></ion-icon>
       </ion-avatar>
       <ion-label>
         <h3>Spesa</h3>
         <p>Dispensato da  SSN</p>
+      </ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-avatar slot="start">
+        <ion-icon name="person"></ion-icon>
+      </ion-avatar>
+      <ion-label>
+        <h3>Principio Attivo</h3>
+        <p>Anfetamina</p>
+      </ion-label>
+    </ion-item>
+    <ion-item color="light">
+      <ion-avatar slot="end">
+        <ion-icon name="airplane"></ion-icon>
+      </ion-avatar>
+      <ion-label>
+        <h3>Che ne so</h3>
+        <p>Bla bla bla car </p>
       </ion-label>
     </ion-item>
   </ion-list>
