--- a/Ionic - DailyPills/myApp/src/app/pages/armadietto/armadietto.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/armadietto/armadietto.page.html
@@ -9,18 +9,70 @@
 </ion-header>
 
 <ion-content>
-  <ion-list lines="full" *ngFor="let farmaco of listfavorites$">
-    <ion-item>
-      <ion-avatar slot="start">
-        <img id="icon" src="assets/icon/pill.png">
-      </ion-avatar>
-      <ion-label>
-        <h2>{{farmaco.farmaco.nome}}</h2>
-        <p>Formato: {{farmaco.specifica.formato}} {{farmaco.specifica.quantita}}gr</p>
-      </ion-label>
-      <ion-icon name="arrow-dropright"></ion-icon>
-    </ion-item>
-  </ion-list>
+    <div *ngIf="listfavorites$">
+      <ion-list lines="full" *ngFor="let farmaco of listfavorites$">
+        <ion-item>
+          <ion-avatar slot="start">
+            <img id="icon" src="assets/icon/pill.png">
+          </ion-avatar>
+          <ion-label>
+            <h2>{{farmaco.farmaco.nome}}</h2>
+            <p>Formato: {{farmaco.specifica.formato}} {{farmaco.specifica.quantita}}gr</p>
+          </ion-label>
+          <ion-icon name="arrow-dropright"></ion-icon>
+        </ion-item>
+      </ion-list>
+    </div>
+    <div *ngIf="!listfavorites$">
+        <ion-list>
+        <ion-item>
+            <ion-avatar slot="start">
+                <ion-skeleton-text animated></ion-skeleton-text>
+            </ion-avatar>
+            <ion-label>
+                <h3>
+                    <ion-skeleton-text animated style="width: 50%"></ion-skeleton-text>
+                </h3>
+                <p>
+                    <ion-skeleton-text animated style="width: 80%"></ion-skeleton-text>
+                </p>
+                <p>
+                    <ion-skeleton-text animated style="width: 60%"></ion-skeleton-text>
+                </p>
+            </ion-label>
+        </ion-item>
+        <ion-item>
+            <ion-thumbnail slot="start">
+                <ion-skeleton-text animated></ion-skeleton-text>
+            </ion-thumbnail>
+            <ion-label>
+                <h3>
+                    <ion-skeleton-text animated style="width: 50%"></ion-skeleton-text>
+                </h3>
+                <p>
+                    <ion-skeleton-text animated style="width: 80%"></ion-skeleton-text>
+                </p>
+                <p>
+                    <ion-skeleton-text animated style="width: 60%"></ion-skeleton-text>
+                </p>
+            </ion-label>
+        </ion-item>
+        <ion-item>
+            <ion-skeleton-text animated style="width: 27px; height: 27px" slot="start"></ion-skeleton-text>
+            <ion-label>
+                <h3>
+                    <ion-skeleton-text animated style="width: 50%"></ion-skeleton-text>
+                </h3>
+                <p>
+                    <ion-skeleton-text animated style="width: 80%"></ion-skeleton-text>
+                </p>
+                <p>
+                    <ion-skeleton-text animated style="width: 60%"></ion-skeleton-text>
+                </p>
+            </ion-label>
+        </ion-item>
+        </ion-list>
+    </div>
   <ion-fab horizontal="end" vertical="bottom" slot="fixed">
     <ion-fab-button (click)="addFarmaco()" color="primary">
       <ion-icon name="add"></ion-icon>
