--- a/Ionic - DailyPills/myApp/src/global.scss
+++ b/Ionic - DailyPills/myApp/src/global.scss
@@ -27,3 +27,9 @@ ion-toolbar {
   font-size: 1.25em !important;
   border: 1px solid transparent;
 }
+
+.dialog-modal .modal-wrapper {
+  height: 40%;
+  width: 70%;
+  border-radius: 10px;
+}
