--- a/Ionic - DailyPills/myApp/src/app/pages/addfarmaco/addfarmaco.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/addfarmaco/addfarmaco.page.html
@@ -13,7 +13,7 @@
       <ion-label>
         <h2>{{farmaco.nome}}</h2>
       </ion-label>
-      <ion-icon (click)="presentModal(farmaco.nome, farmaco.types)" name="add-circle"></ion-icon>
+      <ion-icon (click)="presentModal(farmaco.nome, farmaco.types, farmaco.id)" name="add-circle"></ion-icon>
     </ion-item>
   </ion-list>
 </ion-content>
