--- a/Ionic - DailyPills/myApp/src/app/pages/add-specifica/add-specifica.page.scss
+++ b/Ionic - DailyPills/myApp/src/app/pages/add-specifica/add-specifica.page.scss
@@ -1,3 +1,20 @@
 ion-icon {
   font-size: 24px;
 }
+
+.center {
+  text-align: center;
+}
+
+ion-button {
+  margin-bottom: 20px;
+  margin-right: 20px;
+}
+
+.nomeFarmaco {
+  font-size: 18px;
+}
+
+.descrizione {
+  font-size: 12px;
+}
