--- a/Ionic - DailyPills/myApp/src/app/pages/armadietto/armadietto.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/armadietto/armadietto.page.html
@@ -15,13 +15,14 @@
               <ion-item-options side="start">
                   <ion-item-option color="danger" (click)="delete(farmaco)">Elimina</ion-item-option>
               </ion-item-options>
-              <ion-item>
+              <ion-item (click)="farmacoDetailNav(farmaco)">
                   <ion-avatar slot="start">
                       <img id="icon" src="assets/icon/pill.png">
                   </ion-avatar>
                   <ion-label>
                       <h2>{{farmaco.farmaco.nome}}</h2>
                       <p>Formato: {{farmaco.specifica.formato}} {{farmaco.specifica.quantita}}gr</p>
+                      <p>Quantità rimaste: {{farmaco.numero}} pezzi</p>
                   </ion-label>
                   <ion-icon name="arrow-dropright"></ion-icon>
               </ion-item>
