--- a/Ionic - DailyPills/myApp/src/app/pages/dettaglio-farmaco/dettaglio-farmaco.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/dettaglio-farmaco/dettaglio-farmaco.page.html
@@ -3,6 +3,12 @@
   <ion-toolbar>
     <ion-title color="light">{{farmacodetail$.farmaco.nome}}</ion-title>
   </ion-toolbar>
+  <div>
+    <ion-avatar>
+      <img  src="assets/icon/pillolaDettaglio.png">
+    </ion-avatar>
+  </div>
+
 </ion-header>
 
 <ion-content fullscreen>
