--- a/Ionic - DailyPills/myApp/src/app/pages/addfarmaco/addfarmaco.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/addfarmaco/addfarmaco.page.html
@@ -10,11 +10,12 @@
 <ion-content>
   <ion-list lines="full" *ngFor="let farmaco of farmaciList$">
     <ion-item>
-      <ion-avatar slot="start">
+      <ion-thumbnail slot="start" style="height: 45px; !important; width: 45px; !important;">
         <img id="icon" src="assets/icon/pill.png">
-      </ion-avatar>
+      </ion-thumbnail>
       <ion-label>
         <h2>{{farmaco.nome}}</h2>
+        <p>Uno o più formati disponibili</p>
       </ion-label>
       <ion-icon (click)="presentModal(farmaco.nome, farmaco.types, farmaco.id)" name="add-circle"></ion-icon>
     </ion-item>
