--- a/Ionic - DailyPills/myApp/src/app/pages/impostazioni/impostazioni.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/impostazioni/impostazioni.page.html
@@ -5,14 +5,33 @@
   </ion-toolbar>
 
 </ion-header>
-<ion-content>
 
-  <ion-grid>
-    <ion-row>
-      <ion-col> <ion-label>{{'ITA' | translate}}</ion-label></ion-col>
-      <ion-col><ion-toggle name="lingua" color="light" checked></ion-toggle></ion-col>
-      <ion-col> <ion-label>{{'ENG' | translate}}</ion-label></ion-col>
-    </ion-row>
-  </ion-grid>
-
+<ion-content padding>
+  <form [formGroup]="profiloFormModel">
+    <ion-list no-lines>
+<!--      <ion-item class="animated fadeInUp">-->
+<!--        <ion-label position="floating">{{ 'EMAIL' | translate }}</ion-label>-->
+<!--        <ion-input type="email" formControlName="email"></ion-input>-->
+<!--      </ion-item>-->
+<!--      <p ion-text class="text08" *ngIf="profiloFormModel.get('email').touched && profiloFormModel.get('email').invalid">-->
+<!--        <ion-text color="danger">{{ 'EMAIL_REQUIRED' | translate }}</ion-text>-->
+<!--      </p>-->
+<!--      <ion-item class="animated fadeInUp">-->
+<!--        <ion-label position="floating">{{ 'TELEFONO' | translate }}</ion-label>-->
+<!--        <ion-input type="text" formControlName="telefono"></ion-input>-->
+<!--      </ion-item>-->
+      <ion-item>
+        <ion-label position="fixed">{{ 'LANGUAGE' | translate }}</ion-label>
+        <ion-select formControlName="linguaPreferita" okText="{{ 'SAVE_BUTTON' | translate }}" cancelText="{{ 'CANCEL_BUTTON' | translate }}">
+          <ion-select-option *ngFor="let lingua of lingue" [value]="lingua.valore">{{lingua.etichetta}}</ion-select-option>
+        </ion-select>
+      </ion-item>
+    </ion-list>
+    <div margin-top="30px" align="center">
+      <ion-button icon-left size="medium" shape="round" color="primary" (click)="onSubmit()" [disabled]="!profiloFormModel.valid" tappable>
+        {{ 'SAVE_BUTTON' | translate }}
+      </ion-button>
+    </div>
+  </form>
 </ion-content>
+ 
