--- a/Ionic - DailyPills/myApp/src/app/pages/lista-piani/lista-piani.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/lista-piani/lista-piani.page.html
@@ -16,9 +16,9 @@
           <ion-item-option color="danger" (click)="delete(piano)">{{ 'DELETE_BUTTON' | translate }}</ion-item-option>
         </ion-item-options>
         <ion-item (click)="pianoDetailNav(piano)">
-          <ion-avatar slot="start">
-            <img id="icon" src="assets/icon/pill.png">
-          </ion-avatar>
+          <ion-thumbnail slot="start" style="height: 36px; !important; width: 36px; !important;">
+           <img id="icon" src="assets/icon/piano.png">
+          </ion-thumbnail>
           <ion-label>
             <h2>{{piano.nome}}</h2>
             <p>{{ 'DATA_INIZIO' | translate }}: {{piano.inizio}} </p>
