--- a/Ionic - DailyPills/myApp/src/app/pages/nuovo-piano/nuovo-piano.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/nuovo-piano/nuovo-piano.page.html
@@ -1,6 +1,9 @@
 
 <ion-header translucent text-center>
   <ion-toolbar color="primary">
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
     <ion-title color="light">{{ 'NUOVO_PIANO_TAB' | translate }}</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,13 +12,13 @@
   <ion-grid>
     <ion-row>
     <ion-col style="">
-      <form id="nuovoPiano">
+      <form [formGroup]="insertpianoform" id="nuovoPiano">
         <ion-row>
           <ion-col size="12">
             <ion-card>
               <ion-item class="ion-item-border">
                 <ion-label color="primary" position="floating">{{ 'NOME_PIANO' | translate }}</ion-label>
-                <ion-input autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true" color="primary" inputmode="text" placeholder="{{ 'NOME_PIANO_STRING' | translate }}" required="true"></ion-input>
+                <ion-input formControlName="nome" autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true" color="primary" inputmode="text" placeholder="{{ 'NOME_PIANO_STRING' | translate }}" required="true"></ion-input>
                 <ion-icon name="person" color="primary" slot="end"></ion-icon>
               </ion-item>
             </ion-card>
@@ -26,7 +29,7 @@
             <ion-card>
               <ion-item class="ion-item-border">
                 <ion-label color="primary" position="floating">{{ 'DATA_INIZIO_PIANO' | translate }}</ion-label>
-                <ion-datetime  displayFormat="DD-MM-YYYY"  value="1990-02-19"></ion-datetime>
+                <ion-datetime formControlName="inizio" displayFormat="DD-MM-YYYY" value="{{currentDate$}}"></ion-datetime>
                 <ion-icon name="calendar" color="primary" slot="end"></ion-icon>
               </ion-item>
             </ion-card>
@@ -37,7 +40,7 @@
             <ion-card>
               <ion-item class="ion-item-border">
                 <ion-label color="primary" position="floating">{{ 'DATA_FINE_PIANO' | translate }}</ion-label>
-                <ion-datetime displayFormat="DD-MM-YYYY"  value="1990-02-19"></ion-datetime>
+                <ion-datetime formControlName="fine" displayFormat="DD-MM-YYYY" value="{{currentDate$}}"></ion-datetime>
                 <ion-icon name="calendar" color="primary" slot="end"></ion-icon>
               </ion-item>
             </ion-card>
@@ -48,7 +51,7 @@
             <ion-card>
               <ion-item class="ion-item-border">
                 <ion-label color="primary" position="floating">{{ 'DESCRIZIONE_PIANO' | translate}}</ion-label>
-                <ion-textarea placeholder="{{ 'DESCRIZIONE_PIANO_STRING' | translate}}"></ion-textarea>
+                <ion-textarea formControlName="descrizione" placeholder="{{ 'DESCRIZIONE_PIANO_STRING' | translate}}"></ion-textarea>
                 <ion-icon name="calendar" color="primary" slot="end"></ion-icon>
               </ion-item>
             </ion-card>
@@ -60,7 +63,7 @@
         <ion-row>
           <ion-col size="12">
             <ion-card color="secondary" style="border-radius: 20px">
-              <ion-button color="secondary" style="box-shadow: none" type="submit" expand="full" fill="clear">
+              <ion-button color="secondary" style="box-shadow: none" type="submit" expand="full" fill="clear" (click)="submitPiano()" [disabled]="!insertpianoform.valid">
                 <ion-icon slot="start"  color="light" name="save"></ion-icon>
                 <ion-text color="light">
                   {{ 'SAVE_BUTTON' | translate }}
