--- a/Ionic - DailyPills/myApp/src/app/pages/homepage/homepage.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/homepage/homepage.page.html
@@ -1,6 +1,10 @@
-<ion-list-header color="primary">
-  <ion-label>Mercoledi 12 Aprile 2019</ion-label>
-</ion-list-header>
+<ion-header translucent text-center>
+  <ion-toolbar color="primary">
+    <ion-title color="light">Mercoledi 12 Aprile 2019</ion-title>
+  </ion-toolbar>
+</ion-header>
+
+
 <ion-progress-bar color="secondary" value="0.3">30</ion-progress-bar>
 <ion-content>
   <ion-list lines="none">
