--- a/Ionic - DailyPills/myApp/src/app/pages/homepage/homepage.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/homepage/homepage.page.html
@@ -1,6 +1,6 @@
 <ion-header translucent text-center>
   <ion-toolbar color="primary">
-    <ion-title color="light">Mercoledi 12 Aprile 2019</ion-title>
+    <ion-title color="light">{{todaystring$}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
