--- a/Ionic - DailyPills/myApp/src/app/pages/homepage/homepage.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/homepage/homepage.page.html
@@ -1,11 +1,12 @@
 <ion-header translucent text-center>
   <ion-toolbar color="primary">
-    <ion-title color="light">{{todaystring$}}</ion-title>
+    <ion-title color="light">Home</ion-title>
   </ion-toolbar>
 </ion-header>
 
 
 <ion-progress-bar color="secondary" value="0.3">30</ion-progress-bar>
+<ion-label>{{todaystring$}}</ion-label>
 <ion-content>
   <ion-list lines="none">
     <ion-list-header>
